--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 apache_adminer_enable_site: true
-# Insecure default adminer/adminer: Change it!
+# Insecure default admin/admin: Change it!
 apache_adminer_htpasswd_file:
-  - "adminer:$apr1$NxFu2BdO$eCONlEN2lbQQhpgrbo6OU."
+  - "admin:$apr1$L3/YfMpc$hoBy7RoDMUyy2X02LJRf5/"
 apache_adminer_htpasswd_bypass_from: []
 apache_adminer_subdomain: "devel-mysql"
